refactor for library, comment out background page, combine submit host

--- a/src/popup.html
+++ b/src/popup.html
@@ -67,9 +67,7 @@
         <button id="traceHost">Submit</button>
         <br />
         <br />
-        <select class="selectHost" id="trset" style="width: 100%""><option value="">Select a trset</option></select>
-        <br />
-        <select class="selectHost" id="history" style="width: 100%"><option value="">Select a history host</option></select>
+        <select class="selectHost" style="width: 100%""><option value="">Select a host option</option><optgroup id="trset" label="TrSet"></optgroup><optgroup id="history" label="Recent history"></optgroup"></select>
       </fieldset>
 
       <div id="trsets" style="display: none">
