--- a/src/popup.html
+++ b/src/popup.html
@@ -37,7 +37,7 @@
     <body>
       <div>
       <span id="dashboard"></span>
-      <h1><a href="http://ixmaps.ca">ixMaps</a></h1>
+      <h1><a href="http://ixmaps.ca">IXmaps</a></h1>
     </div>
       <fieldset>
         <legend>Instance</legend>
