--- a/src/app.html
+++ b/src/app.html
@@ -56,11 +56,10 @@
       <fieldset style="float: left; width: 47%">
       <legend>Instance</legend>
         <div style="float: right; width: 47%">
-        <label for="command">Command</label><input id="command" value="traceroute" />
-        <br />
-        <label for="args">Args</label><textarea id="args"></textarea><br />
-        <span style="text-align: right"><button id="saveConfig">Save</button></span>
-      </div>
+          <label for="command">Command</label><input id="command" value="traceroute" />
+          <br />
+          <label for="args">Args</label><textarea id="args"></textarea><br />
+        </div>
         <label for="server">Server</label>
         <input id="server" type="text" value="http://localhost:8181" />
         <br />
@@ -69,6 +68,7 @@
         <br />
         <label for="postalcode">Postal code</label>
         <input id="postalcode" value="M1M" size="6" />
+        <div style="text-align: center"><button id="saveConfig">Save</button></div>
     </fieldset>
 
       <br style="clear: both" />
